--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
+    "angular": "^1.5.8",
+    "angular-i18n": "^1.5.8",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "helmet": "^1.3.0",
@@ -16,7 +18,8 @@
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^1.0.1",
     "loopback-datasource-juggler": "^2.39.0",
-    "loopback": "^2.22.0"
+    "loopback": "^2.22.0",
+    "ngmap": "^1.17.6"
   },
   "devDependencies": {
     "eslint": "^2.13.1",
